# ct-segmentation-toolkit

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
ct_seg/: __init__.py  labeling.py  model.py  segment.py  som_bands.py  tracking.py  train.py  viewer.py
ct_seg/denoise/: ACKNOWLEDGMENTS.md  __init__.py  baseline_config.yaml  data.py  denoise_slice.py  denoise_volume.py  eval.py  loss.py  model.py  tiffs.py  train.py  utils.py
docs/: PERF.md
docs/profiling/: flame_som_after.collapsed.txt  flame_som_baseline.collapsed.txt
scripts/: profile_unet.py
tests/: test_denoise.py  test_model.py  test_segment.py  test_som_bands.py  test_tracking.py
